--- a/grid_system.scss
+++ b/grid_system.scss
@@ -36,6 +36,18 @@ $row-padding-right:10px;
 	.col-xs-11{width:91.666666%;}
 	.col-xs-12{width:100%;}
 
+	.col-xs-left-1{margin-left:8.33333%;}
+	.col-xs-left-2{margin-left:16.66666%;}
+	.col-xs-left-3{margin-left:25%;}
+	.col-xs-left-4{margin-left:33.33333%;}
+	.col-xs-left-5{margin-left:41.6666666%;}
+	.col-xs-left-6{margin-left:50%;}
+	.col-xs-left-7{margin-left:58.333333%;}
+	.col-xs-left-8{margin-left:66.66666%;}
+	.col-xs-left-9{margin-left:75%;}
+	.col-xs-left-10{margin-left:83.3333%;}
+	.col-xs-left-11{margin-left:91.666666%;}
+
 }
 
 @media (min-width:$xs-screen+1) and (max-width:$sm-screen){
@@ -52,6 +64,18 @@ $row-padding-right:10px;
 	.col-sm-10{width:83.3333%;}
 	.col-sm-11{width:91.666666%;}
 	.col-sm-12{width:100%;}
+
+	.col-sm-left-1{margin-left:8.33333%;}
+	.col-sm-left-2{margin-left:16.66666%;}
+	.col-sm-left-3{margin-left:25%;}
+	.col-sm-left-4{margin-left:33.33333%;}
+	.col-sm-left-5{margin-left:41.6666666%;}
+	.col-sm-left-6{margin-left:50%;}
+	.col-sm-left-7{margin-left:58.333333%;}
+	.col-sm-left-8{margin-left:66.66666%;}
+	.col-sm-left-9{margin-left:75%;}
+	.col-sm-left-10{margin-left:83.3333%;}
+	.col-sm-left-11{margin-left:91.666666%;}
 
 }
 
@@ -70,6 +94,17 @@ $row-padding-right:10px;
 	.col-md-11{width:91.666666%;}
 	.col-md-12{width:100%;}
 
+	.col-md-left-1{margin-left:8.33333%;}
+	.col-md-left-2{margin-left:16.66666%;}
+	.col-md-left-3{margin-left:25%;}
+	.col-md-left-4{margin-left:33.33333%;}
+	.col-md-left-5{margin-left:41.6666666%;}
+	.col-md-left-6{margin-left:50%;}
+	.col-md-left-7{margin-left:58.333333%;}
+	.col-md-left-8{margin-left:66.66666%;}
+	.col-md-left-9{margin-left:75%;}
+	.col-md-left-10{margin-left:83.3333%;}
+	.col-md-left-11{margin-left:91.666666%;}
 }
 
 @media (min-width:$md-screen+1){
@@ -86,5 +121,18 @@ $row-padding-right:10px;
 	.col-lg-10{width:83.3333%;}
 	.col-lg-11{width:91.666666%;}
 	.col-lg-12{width:100%;}
+
+
+	.col-lg-left-1{margin-left:8.33333%;}
+	.col-lg-left-2{margin-left:16.66666%;}
+	.col-lg-left-3{margin-left:25%;}
+	.col-lg-left-4{margin-left:33.33333%;}
+	.col-lg-left-5{margin-left:41.6666666%;}
+	.col-lg-left-6{margin-left:50%;}
+	.col-lg-left-7{margin-left:58.333333%;}
+	.col-lg-left-8{margin-left:66.66666%;}
+	.col-lg-left-9{margin-left:75%;}
+	.col-lg-left-10{margin-left:83.3333%;}
+	.col-lg-left-11{margin-left:91.666666%;}
 
 }
